syntax = "proto3";

option go_package = "pkg/api/v1";

package filterfeed;

message FilterSpecs {
  repeated FilterSpec specs = 1;
}

message FilterSpec {
  FilterType type = 1;
  string expression = 2;
  FilterTarget target = 3;
  FilterEffect effect = 4;
}

enum FilterEffect {
  INCLUDE = 0;
  EXCLUDE = 1;
}

enum FilterType {
  REGEX = 0;
}

enum FilterTarget {
  TITLE = 0;
  DESCRIPTION = 1;
}

message OverrideSpec {
  string target = 1;
  string value = 2;
}

message FetchFeedRequest {
  string feedURL = 1;
  repeated FilterSpec filters = 2;
  repeated OverrideSpec overrides = 3;
}

message OverrideSpecs {
  repeated OverrideSpec specs = 1;
}

message FetchFeedResponse {
  string content = 1;
}